test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/postfix_incr_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  identifier(arr)
  ++
  ;
  return
  const int(0)
  ;
  }
